# djangocms-history

./: .coverage  .coveragerc  .gitignore  CHANGELOG.rst  LICENSE  LICENSE.txt  MANIFEST.in  README.rst  addon.json  pyproject.toml  runtests.py  setup.py  tox.ini
.github/: CONTRIBUTING.rst  ISSUE_TEMPLATE.md
.github/workflows/: lint.yml  publish-to-live-pypi.yml  publish-to-test-pypi.yml  test.yml
.tx/: config
djangocms_history/: __init__.py  action_handlers.py  actions.py  admin.py  apps.py  cms_plugins.py  cms_toolbars.py  compat.py  datastructures.py  forms.py  helpers.py  models.py  operation_handlers.py  serializer.py  signals.py  urls.py  utils.py  views.py
djangocms_history/locale/ar/LC_MESSAGES/: django.mo  django.po
djangocms_history/locale/de/LC_MESSAGES/: django.mo  django.po
djangocms_history/locale/en/LC_MESSAGES/: django.mo  django.po
djangocms_history/locale/es/LC_MESSAGES/: django.mo  django.po
djangocms_history/locale/fi/LC_MESSAGES/: django.mo  django.po
djangocms_history/locale/fr/LC_MESSAGES/: django.mo  django.po
djangocms_history/locale/ko/LC_MESSAGES/: django.mo  django.po
djangocms_history/locale/nl/LC_MESSAGES/: django.mo  django.po
djangocms_history/locale/ru/LC_MESSAGES/: django.mo  django.po
djangocms_history/locale/sq/LC_MESSAGES/: django.mo  django.po
djangocms_history/locale/zh_CN/LC_MESSAGES/: django.mo
djangocms_history/locale/zh_TW/LC_MESSAGES/: django.mo  django.po
djangocms_history/locale/zn_CN/LC_MESSAGES/: django.po
djangocms_history/management/commands/: purge_archived_operations.py
djangocms_history/migrations/: 0001_initial.py  0002_auto_20170606_1001.py  0003_delete_cms3_history.py  0004_hash_session_keys.py  0005_add_operation_lookup_index.py
djangocms_history/static/djangocms_history/: color_mode.css
djangocms_history/templates/djangocms_history/toolbar/: ajax_button.html
tests/: base.py  requirements.txt  settings.py  test_action_handlers.py  test_admin.py  test_archiving.py  test_forms.py  test_helpers.py  test_m2m.py  test_migrations.py  test_models.py  test_operation_recording.py  test_origin.py  test_toolbar.py  test_undo_redo.py  test_versioning.py  test_views.py  urls.py
tests/link_migrations/: 0001_initial.py
tests/manytomany_migrations/: 0001_initial.py
tests/requirements/: base.txt  dj42_cms41.txt  dj42_cms50.txt  dj50_cms41.txt  dj52_cms50.txt  dj52_cms50_versioning.txt  dj60_cms51.txt  dj60_cms51_versioning.txt  dj61_cms51.txt
tests/templates/: articles.html  page.html
tests/templates/pluginapp/link/: link.html
