[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "djangocms-history"
dynamic = ["version"]
description = "Adds undo/redo functionality to django CMS"
readme = "README.rst"
license = "BSD-3-Clause"
requires-python = ">=3.10"
authors = [{ name = "Divio AG", email = "info@divio.ch" }]
maintainers = [
    { name = "Django CMS Association and contributors", email = "info@django-cms.org" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: Django",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.2",
    "Framework :: Django CMS",
    "Framework :: Django CMS :: 3.11",
    "Framework :: Django CMS :: 4.1",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
]
dependencies = ["django>=3.2,<4.3", "django-cms>=3.11,<4.0"]


[project.urls]
Homepage = "https://github.com/django-cms/djangocms-history"
Repository = "https://github.com/django-cms/djangocms-history"
Issues = "https://github.com/django-cms/djangocms-history"

[tool.setuptools.dynamic]
version = { attr = "djangocms_history.__version__" }

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
"djangocms_history" = [
    "templates/**/*.html",
    "static/**/*",
    "locale/**/*",
    "*.po",
    "*.mo",
]

[tool.ruff]
target-version = "py310"
line-length = 119
exclude = ["djangocms_history/migrations", "tests/fixtures"]

[tool.ruff.lint]
select = ["I"]
mccabe.max-complexity = 5
ignore = []

[tool.isort]
line_length = 119
known_first_party = ["djangocms_history"]
